--- a/styles/edit_sheet.css
+++ b/styles/edit_sheet.css
@@ -188,28 +188,75 @@ form div:nth-of-type(7) button {
 form div:nth-of-type(7) button:last-of-type{
   background-color:hsla(212, 65%, 49%, 1);;
 }
-form div:last-of-type {
+
+.deletebutton{
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width:100%;
 }
 
-
-form div:last-of-type button {
+#delete {
+  align-self: flex-end;
+}
+.deletebutton button{
   margin: 0em 3em 0.5em 0em;
-  background-color: red;
+  background-color:red;
   color: white;
   font-weight: bolder;
   font-size: 1em;
   cursor: pointer;
-  border: none;
-  border-radius: 0.5em;
+  border:none;
+  border-radius: .5em;
   padding: 1em;
-  transition: 0.2s transform ease-in-out;
-  align-self: flex-end;
-
+  transition: .2s transform ease-in-out;
 }
 
-form div:last-of-type button:hover {
+.deletebutton button:hover{
   background-color: rgb(233, 7, 7);
+}
+
+
+.modal {
+  display: none;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.content {
+background-color:#EFF2EF ;
+  margin: 20%; /* 15% from the top and centered */
+  padding: 4em;
+  border: .2em solid lightgray ;
+  border-radius: 2em;
+  width: 50%; /* Could be more or less, depending on screen size */
+}
+
+ #no,#yes {
+margin: 1em;
+padding: 1em 3em 1em 3em;
+border: .2em solid lightgray;
+font-weight: bolder;
+margin-left: 1em;
+transition: .2s transform ease-in-out;
+    color: white;
+    font-weight: bolder;
+    font-size: 1em;
+    border-radius: 2em;
+    cursor: pointer;
+} 
+#no:hover,#yes:hover{
+  transform: scale(1.08);
+}
+#no{
+  background-color: #FF007F; 
+}
+#yes{
+  background-color: hsla(212, 65%, 49%, 1) ; 
+
 }
