--- a/styles/search.css
+++ b/styles/search.css
@@ -13,7 +13,7 @@ body{    font-family: 'Krona One', sans-serif;
  
 }
 header{
-    margin: 2em 0em 5em 0em;
+    margin: 2em 0em 8em 0em;
     animation: navFade2 1.5s ease 0s forwards;
   }
 
@@ -47,9 +47,9 @@ main div{
   }
   
   header nav ul div img {
-    padding-left: 5em;
-    height: 10em;
-    width: 10em;
+    margin-left: 5em;
+    height: 5em;
+    width: 5em;
 }
   header nav ul div:last-of-type{
     display: flex;
@@ -59,6 +59,18 @@ main div{
     border-radius: 2em;
     height: 3.5em;
     background-color: white;
+  }
+
+  ul div:last-of-type img{
+    height: 2em;
+    width: 2em;
+    margin:0em 1em 0em 0em;
+    align-self: center;
+    border-radius: 50%;
+  }
+  .fa{
+    align-self: center;
+    margin-right: 1em;
   }
   
   header nav ul li{
