--- a/styles/viewing.css
+++ b/styles/viewing.css
@@ -56,14 +56,13 @@ a{
     box-shadow: 1px 2px 10px 3px rgb(173, 173, 173); /* no border but box-shadow */
     margin-right: 2em;
     border-radius: 2em;
-    min-width: 40vw;  /* for larger screens, it can grow*/
     height: 3.5em;
     background-color: white;
 
   }
   
   header nav ul li{
-    margin:0em 1.5em 0em .5em;
+    margin:0em 0.5em 0em .5em;
     padding:1em;
     transition: .2s transform ease-in-out; /*scaling transformation*/
     border-radius: 2em;
@@ -99,7 +98,6 @@ ul div:last-of-type img{
 
 .fa{
   align-self: center;
-  margin-right: 2em;
 }
 main p{
     font-size: 1.3em;
@@ -112,28 +110,6 @@ main table{
     font-size: 2em;
 }
 
-thead{
-    color: #0974F1;
-    font-style: italic;
-    font-weight: bold;
-}
-
-td,
-th {
-  border: 0.2em solid rgba(255, 255, 255, 0.63); /* white borders */
-  padding: 0.5em;
-  width: 17em;
-  height: 1.5em;
-  font-size: 0.61em;
-}
-
-td>button {
-  color: blue;
-  padding: 1em;
-}
-td>button:hover {
-  color: #FF007F;
-}
 footer{
     background: black;
     color:white;
@@ -167,3 +143,69 @@ footer{
     height:3em;
     width: 3em;
   }
+
+  td button{
+    background-color: white; /* 25D09D */
+    font-weight: bolder;
+    font-size: 1em;
+    cursor: pointer;
+    border: 0.2em solid hsla(212, 65%, 49%, 1);;
+    border-radius: 2em;
+    padding: 0.5em 1.5em 0.5em 1.5em;
+  }
+
+td,
+th {
+  padding: 0.5em;
+  width: 17em;
+  height: 1.5em;
+  font-size: 0.6em;
+  padding-top:1em;
+}
+
+td a:hover, td button:hover{
+    color:#FF007F ;
+    cursor: hand;
+}
+
+td,th{
+  border:0.1em solid white;
+  padding:0.5em;
+}
+
+tr th{
+  border-radius: 5px 5px 0px 0px;
+  background-color: #2196F3;
+  color: white;
+}
+
+table{
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: separate;
+  color:black;
+  text-align: center;
+}
+
+
+th
+{
+  border-radius: 5px 0px 0px 5px;
+}
+
+tr:nth-child(8) td:nth-child(1)
+{
+  border-radius: 5px 0px 0px 5px;
+}
+
+tr{
+  background-color: #90CAF9;
+}
+
+section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
