--- a/styles/search.css
+++ b/styles/search.css
@@ -11,6 +11,9 @@ body{    font-family: 'Krona One', sans-serif;
   
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#9fccfa", endColorstr="#0974f1", GradientType=1 );
  
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 header{
     margin: 2em 0em 8em 0em;
@@ -70,11 +73,10 @@ main div{
   }
   .fa{
     align-self: center;
-    margin-right: 1em;
   }
   
   header nav ul li{
-    margin:0em 1.5em 0em .5em;
+    margin:0em 0.5em 0em .5em;
     padding:1em;
     transition: .2s transform ease-in-out; /*scaling transformation*/
     border-radius: 2em;
@@ -163,6 +165,7 @@ footer{
     color:white;
     padding: 1em;
   font-size: 1.5em;
+  margin-top: auto;
   }
   
   footer ul{
