--- a/styles/cancelslot.css
+++ b/styles/cancelslot.css
@@ -7,7 +7,9 @@
 body{
   font-family: 'Krona One', sans-serif;
   
-  
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 
 
 }
@@ -117,7 +119,7 @@ footer{
   color:white;
   padding: 1em;
   font-size: 1.5em;
-  margin-top: 3em;
+  margin-top: auto;
 }
 
 footer ul{
