--- a/styles/search.css
+++ b/styles/search.css
@@ -11,7 +11,7 @@ body{    font-family: 'Krona One', sans-serif;
   
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#9fccfa", endColorstr="#0974f1", GradientType=1 );
  
-  min-height: 100vh;
+  min-height: 100vh;  /*ensures that the gradient covers the entire page background, and the footer stays at the bottom */
   display: flex;
   flex-direction: column;
 }
@@ -165,7 +165,7 @@ footer{
     color:white;
     padding: 1em;
   font-size: 1.5em;
-  margin-top: auto;
+  margin-top: auto; /* ensures footer is at bottom */
   }
   
   footer ul{
