--- a/styles/edit_sheet.css
+++ b/styles/edit_sheet.css
@@ -68,6 +68,19 @@ header nav ul div:last-of-type li:hover {
   background-color: #ff007f;
   color: white;
 }
+/* profile picture */
+head nav ul div:last-of-type img{
+  height: 2em;
+  object-fit: contain;
+  margin-right: 1em;
+  align-self: center;
+  border-radius: 50%;
+}
+/* icon for pfp */
+.fa{
+  align-self: center;
+  margin-right: 2em;
+}
 
 a {
   text-decoration: none;
